syntax = "proto3";
package actor;
option go_package = "github.com/chenxyzl/grain/actor";
//import "google/protobuf/any.proto";
import "actor.proto";

message Envelope {
    enum MsgType {
        Tell = 0;
        Request = 1;
        Reply = 2;
    }
    map<string, string> header = 1; //for context k.v
    ActorRef sender = 2;
    ActorRef target = 3;
    uint64 requestId = 4;
    string msgName = 5;
    bytes content = 6;
    string error = 7; //for reply error immediately? else waiting timeout too slow
}
service Remoting {
    rpc Listen (stream Envelope) returns (stream Envelope) {}
}
